DevOrg/meghDevOrg/force-app/main/default/objects/test_junction_object__c/test_junction_object__c.object-meta.xml
<CustomObject>
    <label>test junction object</label>
    <nameField>
        <label>test junction object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>test junction objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>