DevOrg/meghDevOrg/force-app/main/default/objects/test_junction_object__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>test junction objects</relationshipLabel>
    <relationshipName>Account</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>