DevOrg/meghDevOrg/force-app/main/default/objects/test_junction_object__c/fields/Case2__c.field-meta.xml
<CustomField>
    <fullName>Case2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case2</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case 1</relationshipLabel>
    <relationshipName>test_junction_objects1</relationshipName>
    <type>Lookup</type>
</CustomField>