DevOrg/meghDevOrg/force-app/main/default/objects/test_junction_object__c/fields/Case_2_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_2_Number__c</fullName>
    <formula>Case2__r.CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case 2 Number</label>
    <type>Text</type>
</CustomField>