DevOrg/meghDevOrg/force-app/main/default/objects/test_junction_object__c/fields/History_Formula__c.field-meta.xml
<CustomField>
    <fullName>History_Formula__c</fullName>
    <formula>CASE(
     PI_Hot_Indicator__c, 
     &quot;Y&quot;, History__c+&quot; &quot;+IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 12, 12), 
     &quot;N&quot;, History__c+&quot; &quot;+IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;black&quot;, 12, 12),
     History__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>History</label>
    <type>Text</type>
</CustomField>