DevOrg/meghDevOrg/force-app/main/default/objects/test_junction_object__c/fields/History_Type__c.field-meta.xml
<CustomField>
    <fullName>History_Type__c</fullName>
    <label>History Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABC</fullName>
            </value>
            <value>
                <fullName>123</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>