DevOrg/meghDevOrg/force-app/main/default/objects/test_junction_object__c/fields/Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identifier__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Unique Identifier</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>